--- a/.gitignore
+++ b/.gitignore
@@ -121,6 +121,7 @@ celerybeat.pid
 
 # Environments
 .env
+.env-dev
 .venv
 env/
 venv/
@@ -161,3 +162,6 @@ cython_debug/
 
 # Redis database file
 db-data/*.rdb
+
+# Mac OS X
+.DS_Store
