Configure the project for Docker Dev Environments facility

--- a/compose.yaml
+++ b/compose.yaml
@@ -3,7 +3,7 @@ services:
   web:
     build:
       context: .
-      target: build
+      target: production
     # Signal expected by Flask for a graceful shutdown.
     stop_signal: SIGINT
     ports:
